force-app/main/default/objects/Servicer_Loan__c/Servicer_Loan__c.object-meta.xml
<CustomObject>
    <description>Details from the Servicer regarding the related Loan</description>
    <label>Servicer Loan</label>
    <nameField>
        <label>Servicer Loan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Servicer Loans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>