force-app/main/default/objects/Servicer_Loan__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Servicer Loans</relationshipLabel>
    <relationshipName>Servicer_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>