force-app/main/default/objects/Servicer_Loan__c/fields/Delinquent_120_Days__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_120_Days__c</fullName>
    <description>Number times payment received 120 days or more past due
date life-to-date&quot;</description>
    <inlineHelpText>Number times payment received 120 days or more past due
date life-to-date&quot;</inlineHelpText>
    <label>Delinquent 120 Days +</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>