force-app/main/default/objects/Servicer_Loan__c/fields/Onboarded_at_Servicer__c.field-meta.xml
<CustomField>
    <fullName>Onboarded_at_Servicer__c</fullName>
    <description>The Date that the Servicer confirmed this Loan had been on-boarded</description>
    <inlineHelpText>The Date that the Servicer confirmed this Loan had been on-boarded</inlineHelpText>
    <label>Onboarded at Servicer</label>
    <type>Date</type>
</CustomField>