force-app/main/default/objects/Servicer_Loan__c/fields/Onboarding_File_Sent_to_Servicer__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_File_Sent_to_Servicer__c</fullName>
    <description>The Date that the Onboarding file was sent to the Servicer</description>
    <inlineHelpText>The Date that the Onboarding file was sent to the Servicer</inlineHelpText>
    <label>Onboarding File Sent to Servicer</label>
    <type>Date</type>
</CustomField>