force-app/main/default/objects/Servicer_Loan__c/fields/P_and_I__c.field-meta.xml
<CustomField>
    <fullName>P_and_I__c</fullName>
    <description>Principal and Interest</description>
    <label>P&amp;I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>