force-app/main/default/objects/Servicer_Loan__c/fields/Payment_History__c.field-meta.xml
<CustomField>
    <fullName>Payment_History__c</fullName>
    <label>Payment History</label>
    <length>250</length>
    <type>Text</type>
</CustomField>