force-app/main/default/objects/Servicer_Loan__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Servicer Loans</relationshipLabel>
    <relationshipName>Servicer_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>