force-app/main/default/objects/Servicer_Loan__c/fields/Servicer_Commitment_ID__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Commitment_ID__c</fullName>
    <externalId>true</externalId>
    <label>Servicer Commitment ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>