force-app/main/default/objects/Servicer_Loan__c/fields/Servicer_Loan_Status__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Loan_Status__c</fullName>
    <label>Servicer Loan Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Paidoff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>