force-app/main/default/objects/Servicer_Loan__c/fields/Servicer_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Name__c</fullName>
    <label>Servicer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Servicer_Name</valueSetName>
    </valueSet>
</CustomField>