force-app/main/default/objects/Servicer_Loan__c/fields/Servicer_Provided_Portfolio_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicer_Provided_Portfolio_Name__c</fullName>
    <description>Servicer Provided Portfolio name</description>
    <inlineHelpText>Portfolio Name Received from the Servicer</inlineHelpText>
    <label>Servicer Provided Portfolio Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>