force-app/main/default/objects/Servicer_Loan__c/fields/T_and_I__c.field-meta.xml
<CustomField>
    <fullName>T_and_I__c</fullName>
    <description>Taxes And Insurance</description>
    <label>T&amp;I</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>