force-app/main/default/objects/Servicer_Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Current_UPB__c</columns>
    <columns>Servicer_Name__c</columns>
    <columns>Servicer_Loan_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>